--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /__pycache__
 /venv
 /.idea
+/configuration/__pycache__
+/connectors/__pycache__
+/services/__pycache__
+/transformations/__pycache__
